// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Release generateReleaseNotes should allow user to configure section headings 1`] = `
"#### 💥 Breaking Change

- First [#1234](https://github.com/web/site/pull/1234) (adam@dierkens.com)

#### 🚀 Enhancement

- Second [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### 🐛 Bug Fix

- Fourth [#1237](https://github.com/web/site/pull/1237) (adam@dierkens.com)

#### 🏠 Internal

- Third [#1236](https://github.com/web/site/pull/1236) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should detect pre-release branches 1`] = `
"#### 🐛 Bug Fix

- Autobots roll out! (adam@dierkens.com)

#### ⚠️ Pushed to \`next\`

- Doom Patrol enabled (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should find matching PRs for shas through search 1`] = `
"#### 💥 Breaking Change

- Doom Patrol enabled (adam@dierkens.com)

#### 🐛 Bug Fix

- Autobots roll out! (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should get extra user data for login 1`] = `
"#### 🐛 Bug Fix

- I have a login attached [#1235](https://github.com/web/site/pull/1235) ([@adierkens](https://github.com/adierkens))

#### Authors: 1

- Adam Dierkens ([@adierkens](https://github.com/adierkens))"
`;

exports[`Release generateReleaseNotes should ignore closed prs 1`] = `
"#### 🐛 Bug Fix

- Doom Patrol enabled (adam@dierkens.com)
- Autobots roll out! (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should include PR-less commits 1`] = `
"#### 🚀 Enhancement

- First Feature [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### ⚠️ Pushed to \`main\`

- I should be included (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should include PRs merged to other PRs 1`] = `
"#### 🐛 Bug Fix

- Doom [#12343](https://github.com/web/site/pull/12343) (adam@dierkens.com)
- Dino [#1235](https://github.com/web/site/pull/1235) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should match commits with related PRs 1`] = `
"#### 🚀 Enhancement

- Feature [#124](https://github.com/web/site/pull/124) (adam@dierkens.com)

#### 🐛 Bug Fix

- I am a commit with a related PR (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release generateReleaseNotes should match rebased commits to PRs 1`] = `
"#### 🚀 Enhancement

- Feature [#124](https://github.com/web/site/pull/124) (adam@dierkens.com)
- I was rebased [#123](https://github.com/web/site/pull/123) (adam@dierkens.com)

#### ⚠️ Pushed to \`main\`

- I am a commit to main (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`Release getCommits should be able to omit by username 1`] = `
Array [
  Object {
    "authorEmail": "lisowski54@gmail.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "hash": undefined,
        "login": "andrew",
        "name": "Andrew Lisowski",
        "username": "andrew",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
]
`;

exports[`Release getCommits should ignore rebased commits if no last release 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
]
`;

exports[`Release getCommits should include PR opener in authors (in case of external rebase) 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
      Object {
        "email": "renovate@automation.com",
        "login": "renovate",
        "name": "Renovate",
        "username": "renovate",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "pullRequest": Object {
      "body": undefined,
      "number": 124,
    },
    "subject": "Feature",
  },
]
`;

exports[`Release getCommits should match rebased commits to PRs 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "1a2b",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`Release getCommits should match rebased commits to PRs with first commit 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "1a2b",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I was rebased",
  },
]
`;

exports[`Release getCommits should not omit commits in next branch 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "1a2b",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "1a2b",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "I wasn't released previously",
  },
]
`;

exports[`Release getCommits should not resolve authors with no PR commits 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "foo",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": undefined,
    "subject": "First",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "foo",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": undefined,
    "subject": "Second",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "foo",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": undefined,
    "subject": "Third",
  },
]
`;

exports[`Release getCommits should omit commits that have already been released 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 124,
    },
    "subject": "Feature",
  },
]
`;

exports[`Release getCommits should resolve authors with PR commits 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "foo",
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": undefined,
    "subject": "First",
  },
  Object {
    "authorEmail": "andrew@users.noreply.github.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "hash": undefined,
        "login": "andrew",
        "name": "Andrew Lisowski",
        "username": "andrew",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
  Object {
    "authorEmail": "lisowski54@gmail.com",
    "authorName": "Andrew Lisowski",
    "authors": Array [
      Object {
        "email": "lisowski54@gmail.com",
        "name": "Andrew Lisowski",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": Object {
      "number": 123,
    },
    "subject": "Second",
  },
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "hash": "foo",
        "name": "Adam Dierkens",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [],
    "pullRequest": undefined,
    "subject": "Third",
  },
]
`;

exports[`Release getCommits should use latest title of PR 1`] = `
Array [
  Object {
    "authorEmail": "adam@dierkens.com",
    "authorName": "Adam Dierkens",
    "authors": Array [
      Object {
        "email": "adam@dierkens.com",
        "name": "Adam Dierkens",
      },
      Object {
        "login": "adam",
        "name": "Adam Dierkens",
        "username": "adam",
      },
    ],
    "files": Array [],
    "hash": "foo",
    "labels": Array [
      "skip-release",
      "minor",
    ],
    "pullRequest": Object {
      "body": undefined,
      "number": 124,
    },
    "subject": "Updated Title",
  },
]
`;
